jellyseerr/00-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jellyseerr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      containers:
      - name: jellyseerr
        image: fallenbagel/jellyseerr:2.3.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          containerPort: 5055
        volumeMounts:
        - name: config
          mountPath: /app/config
      volumes:
      - name: config
        nfs:
          server: ${NFS_SERVER}
          path: /volume1/kubernetes/config/jellyseerr
